--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
  <head>
  </head> 
  <body>
-  <a href = "https://flatiron.com"></a> 
-   
+  <a href = "https://flatiron.com">Flatiron School</a> 
  </body>
 </html>
